# CourseWork

./: .gitignore  CMakeLists.txt  README.md
docs/: Задание на КР_2023.docx  Титульный к лабораторным ООП шаблон_2023.doc  Титульный курсовик 2023.docx
inc/: LinkedList.h  ResearchWorker.h  assertimp.h  term_draw.h  tui.h  utils.h
src/: LinkedList.c  ResearchWorker.c  assertimp.c  main.c  tui.c  utils.c
test/: inputdata.txt  newdata.txt  test_utils.c  tui_templates.txt
